force-app/main/default/objects/SportAttendance__c/SportAttendance__c.object-meta.xml
<CustomObject>
    <label>Sport Attendance</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sport Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>