force-app/main/default/objects/SportAttendance__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>SportPlayer__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Player_Attendances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>