force-app/main/default/objects/SportAttendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obecny</fullName>
            </value>
            <value>
                <fullName>Nieobecny</fullName>
                <default>true</default>
                <label>Nieobecny</label>
            </value>
            <value>
                <fullName>Usprawiedliwiony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>